--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title><%= htmlWebpackPlugin.options.title %></title>
+  <script src="https://www.google.com/recaptcha/api.js?render=6LejNWIhAAAAAEIBxOBXNNdxT8-idDbNhyDZZi6l"></script>
 </head>
 
 <body>
